@@ -1,7 +1,11 @@
 2004-05-19  Lars Magne Ingebrigtsen  <larsi@gnus.org>
 
+	* gnus-draft.el (gnus-draft-send): Bind
+	rfc2047-encode-encoded-words.
+
 	* rfc2047.el (rfc2047-encode-region): Encode =? strings. 
 	(rfc2047-encodable-p): Say that =? needs encoding.
+	(rfc2047-encode-encoded-words): New variable.
 
 	* gnus-group.el (gnus-group-select-group): Doc fix.
 
